...
    <string name="subscription">Subscription</string>
    <string name="logout">Logout</string>
    <string name="login_status">LOGIN_STATUS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ijeoma_ibukun_babangida">Ijeoma Ibukun Babangida</string>
    <string name="version_1_0">version 1.0</string>
    <string name="account">Account</string>
    <string name="security">Security</string>
    <string name="payment_method">Payment Method</string>
    <string name="specialty">Specialty</string>
    <string name="measurements">Measurements</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="client_account">Client Account</string>
    <string name="add_client"> Add Client </string>
    <string name="native_measurement">Native Measurement</string>
    <string name="english_measurement">English Measurement</string>
...
