<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/payment_tab_nested_scroll_view"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_20dp"
    tools:context=".ui.profile.editprofile.PaymentMethodFragment">

    <LinearLayout
        android:id="@+id/payment_method_terms_linear_layout"
...
