<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/edit_profile_security_fragment"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.editprofile.SecurityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
